# sqitch-with-templates

./: .gitignore  cabal.project  cabal.project.freeze  flake.nix  sqitch-template-overlay.nix
.github/workflows/: nix-github-actions.yml
create-migration/: create-migration.cabal
create-migration/app/: Config.hs  Main.hs  ProgramOptions.hs  Prompt.hs
create-migration/app/Sqitch/: Command.hs  Template.hs
create-migration/templates/deploy/: add_index.tmpl  add_not_null_constraint.tmpl  bulk_update.tmpl  domain.tmpl  make_column_not_null.tmpl  view.tmpl
create-migration/templates/revert/: domain.tmpl  trigger_row.tmpl
create-migration/templates/verify/: rename_column_step_2.tmpl  statechart_trigger.tmpl  trigger_statement.tmpl  validate_constraint.tmpl  view.tmpl
templates/deploy/: add_column.tmpl  function.tmpl  migration.tmpl  rename_column_step_1.tmpl  rename_column_step_2.tmpl  statechart_trigger.tmpl  table.tmpl  trigger_row.tmpl  trigger_statement.tmpl  validate_constraint.tmpl
templates/revert/: add_column.tmpl  add_index.tmpl  add_not_null_constraint.tmpl  bulk_update.tmpl  function.tmpl  make_column_not_null.tmpl  rename_column_step_1.tmpl  rename_column_step_2.tmpl  statechart_trigger.tmpl  table.tmpl  validate_constraint.tmpl  view.tmpl
templates/verify/: add_column.tmpl  add_index.tmpl  add_not_null_constraint.tmpl  domain.tmpl  function.tmpl  make_column_not_null.tmpl  migration.tmpl  rename_column_step_1.tmpl  table.tmpl  trigger_row.tmpl
