cabal-version:      3.0
name:               create-migration
version:            0.1.0.0
description:        Sqitch utitility to make it easier to use templates
homepage:           https://github.com/kronor-io/sqitch-with-templates#readme
bug-reports:        https://github.com/kronor-io/sqitch-with-templates/issues
author:             Kronor Team
maintainer:         dev@kronor.io
copyright:          2021 Kronor
license:            LGPL-3.0-or-later
category:           Development, Database
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md
data-files:         templates/**/*.tmpl
-- extra-source-files:

common warnings
    ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/kronor-io/sqitch-with-templates

executable create-migration
  import:           warnings
  main-is:          Main.hs

  -- cabal-fmt: expand app -Main
  other-modules:
    Config
    Prompt
    Sqitch.Command
    Sqitch.Template
    Paths_create_migration
    ProgramOptions

  hs-source-dirs:   app
  build-depends:
      base                  >=4.19.1.0     && < 4.22,
      bytestring >= 0.12.1 && < 0.13,
      containers >= 0.6.8 && < 0.9,
      directory >= 1.3.8 && < 1.4,
      time >= 1.12.2 && < 1.16,
      optparse-applicative >= 0.19.0 && < 0.20,
      text >= 2.1.1 && < 2.2,
      process >= 1.6.18 && < 1.7,
      pathtype >= 0.8.1 && < 0.9,
      string-interpolate >= 0.3.4 && < 0.4,

  default-language: Haskell2010
